--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
+# ============================================
+# TenChat NeuroBooster v1.2.1 Configuration
+# ============================================
+
 # Database
 DATABASE_URL=sqlite+aiosqlite:///./data/tenchat_booster.db
 
@@ -13,14 +17,56 @@ AI_MODEL_ANALYTICS=deepseek/deepseek-chat
 # TenChat Settings
 TENCHAT_BASE_URL=https://tenchat.ru
 
-# Safety Limits (per day)
+# ============================================
+# Safety Limits (per day) - CONSERVATIVE!
+# ============================================
 DAILY_LIMIT_LIKES=50
 DAILY_LIMIT_FOLLOWS=20
-DAILY_LIMIT_POSTS=2
+DAILY_LIMIT_POSTS=3
+DAILY_LIMIT_COMMENTS=15
+DAILY_LIMIT_MESSAGES=20
+DAILY_LIMIT_CONNECTIONS=15
 
-# Delays (seconds)
-MIN_ACTION_DELAY=60
+# ============================================
+# Human-like Behavior Settings
+# ============================================
+# Base delays (seconds) - will be randomized
+MIN_ACTION_DELAY=45
 MAX_ACTION_DELAY=180
+
+# Extended delays for risky actions (DMs, cold outreach)
+MIN_RISKY_DELAY=120
+MAX_RISKY_DELAY=360
+
+# Activity windows (hours, 24h format)
+ACTIVITY_WINDOW_START=8
+ACTIVITY_WINDOW_END=22
+
+# Session behavior
+MIN_SESSION_ACTIONS=3
+MAX_SESSION_ACTIONS=12
+SESSION_PAUSE_MIN=300
+SESSION_PAUSE_MAX=900
+
+# ============================================
+# Retry & Circuit Breaker
+# ============================================
+MAX_RETRIES=3
+CIRCUIT_BREAKER_THRESHOLD=5
+CIRCUIT_BREAKER_RESET_TIME=1800
+
+# ============================================
+# Task Worker
+# ============================================
+NUM_TASK_WORKERS=2
+TASK_QUEUE_MAX_SIZE=100
+
+# ============================================
+# Anti-Detection
+# ============================================
+RANDOMIZE_ACTION_ORDER=true
+ENABLE_NOISE_ACTIONS=true
+NOISE_ACTION_PROBABILITY=0.15
 
 # Server
 FASTAPI_HOST=0.0.0.0
