--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
+# ============================================
+# TenChat NeuroBooster v1.2.1 Requirements
+# ============================================
+
 # Core Framework
 fastapi==0.109.0
 uvicorn[standard]==0.27.0
@@ -7,9 +11,9 @@ streamlit==1.31.0
 sqlalchemy==2.0.25
 aiosqlite==0.19.0
 
-# HTTP Client (HTTP/2 Support + SOCKS)
+# HTTP Client (HTTP/2 Support + SOCKS5)
 httpx[http2]==0.26.0
-httpx-socks==0.9.1
+httpx-socks[asyncio]==0.9.1
 
 # AI Integration
 openai==1.12.0
@@ -25,6 +29,8 @@ apscheduler==3.10.4
 
 # Data Processing
 Pillow==10.2.0
+pandas==2.2.0
+openpyxl==3.1.2  # For Excel file support in Streamlit
 
 # Logging
 loguru==0.7.2
@@ -32,3 +38,6 @@ loguru==0.7.2
 # Utils
 python-json-logger==2.0.7
 fake-useragent==1.4.0
+
+# Async support
+anyio==4.2.0
